@@ -4,6 +4,6 @@ Name=EUR/RUB
 Comment=EUR/RUB
 X-AW-Ticker="EURRUB=X"
 X-AW-Active=false
-X-AW-ApiVersion=1
+X-AW-ApiVersion=2
 X-AW-Interval=60
 X-AW-Number=1
