@@ -4,6 +4,6 @@ Name=MSFT.NASDAQ
 Comment=Microsoft Corp
 X-AW-Ticker="MSFT"
 X-AW-Active=false
-X-AW-ApiVersion=1
+X-AW-ApiVersion=2
 X-AW-Interval=60
 X-AW-Number=4
