@@ -20,7 +20,9 @@
     },
     "newline": {
         "\n": "<br>",
-        "\t": "&#09;"
+        "\n\r": "<br>",
+        "\t": "&#09;",
+        "\v": "&#11;"
     },
     "space": {
         " ": "&nbsp;"
